name:                recurse-haskell
version:             0.1.0.0
synopsis:            Recurse Center API bindings for Haskell.
-- description:
license:             BSD3
license-file:        LICENSE
author:              William Sykes Fisher
maintainer:          williamsykesfisher@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Web.Recurse
  build-depends:       base >=4.11 && <4.12
                     , http-client
                     , http-types
                     , http-client-tls
                     , bytestring
                     , exceptions
                     , text
                     , mtl
                     , aeson
  hs-source-dirs:      src
  default-language:    Haskell2010
